--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,11 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "mews/purifier": "^2.0",
+        "intervention/image": "^2.3",
+        "spatie/laravel-analytics": "^1.4",
+        "kryptonit3/counter": "5.2.*"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
